WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275380
[content-visibility] Never run simplified layout as first layout on a renderer
https://bugs.webkit.org/show_bug.cgi?id=275380
Summary
[content-visibility] Never run simplified layout as first layout on a renderer
alan
Reported
2024-06-11 16:54:03 PDT
<
rdar://126279006
>
Attachments
Patch
(3.92 KB, patch)
2024-06-11 17:01 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(4.45 KB, patch)
2024-06-11 18:46 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-06-11 17:01:42 PDT
Created
attachment 471655
[details]
Patch
alan
Comment 2
2024-06-11 18:46:53 PDT
Created
attachment 471656
[details]
[fast-cq]Patch
EWS
Comment 3
2024-06-12 10:39:02 PDT
Committed
279952@main
(579f828a4c55): <
https://commits.webkit.org/279952@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471656
[details]
.
Erica Li
Comment 4
2025-02-18 17:02:32 PST
***
Bug 273025
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug