[content-visibility] Never run simplified layout as first layout on a renderer https://bugs.webkit.org/show_bug.cgi?id=275380 <rdar://126279006>

Reviewed by Antti Koivisto.

1. Normally the initial layout on a renderer (soon after getting attached to the render tree) is a "full" layout (as opposed to a simplified one).
2. However renderers inserted into a "content-visibility: hidden/auto" subtree are getting skipped
   during layout as if they were not part of the content (this is one of the perf benefits of using content-visibility).

Now if a subsequent _content_ mutation triggers simplified type of layout (e.g. and out of flow child is attached) and the
same time through DOM API (and/or scrolling in case of "content-visibility: auto") we run forced layout on this otherwise
skipped subtree, the first real layout may very well be a simplified one.

This change ensures that we always run full layout on a renderer that was previously skipped.
It helps to completely recover from all accumulated mutations while inside a "content-visibility: hidden/auto" subtree.

* LayoutTests/fast/dynamic/table-crash-only-first-forced-layout-expected.txt: Added.
* LayoutTests/fast/dynamic/table-crash-only-first-forced-layout.html: Added.
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::canPerformSimplifiedLayout const):
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::recalcSections const):

Canonical link: https://commits.webkit.org/279952@main