Source/WebCore/rendering/RenderTable.cpp
@@ -1172,7 +1172,7 @@ void RenderTable::recalcSections() const
     for (auto& section : childrenOfType<RenderTableSection>(const_cast<RenderTable&>(*this)))
         section.removeRedundantColumns();
 
-    ASSERT(selfNeedsLayout());
+    ASSERT(selfNeedsLayout() || !everHadSkippedContentLayout());
 
     m_needsSectionRecalc = false;
 }
